# fzf-cpp

./: .envrc  .gitignore  CMakeLists.txt  README.md  justfile
src/: fzf.cpp  fzf.hpp  main.cpp
